Fix for scrolling cards alignment
Used figure element to wrap img and figurecaption instead of p element

--- a/resources/styles/player.css
+++ b/resources/styles/player.css
@@ -22,31 +22,25 @@ body{
   visibility: hidden;
   position: absolute;
   font-size:1.4em;
-  /* text-align:center; */
-  /* margin-top: 1%; */
   width: 100%;
   margin-left: 0px;
 }
 .txtPlayerName{
   width: 30%;
-  /* height: 70%; */
   padding: 1% 1% 1% 1%;
   text-align:center;
   font-family: sans-serif;
   font-size:1.4em;
   box-sizing: border-box;
   border-radius: 6px;
-  /* margin-top: 1%; */
 }
 .btnAddMe{
     background:#2ecc71;
-    /* height: 80%; */
     padding: 1% 2% 1% 2%;
     font-size: 1.3em;
     color:white;
     border-radius:6px;
     margin-left: 2%;
-    /* width: 7em; */
 }
 .btn{
     background:#2ecc71;
@@ -70,10 +64,7 @@ body{
 
 .divChatContainer{
   background: #8499db;
-  /* width:30%;
-  height:90%; */
   border-radius:6px;
-  /* float:left; */
   text-align:center;
   padding: 0.5% 1% 1% 1%;
 }
@@ -84,23 +75,9 @@ body{
 }
 .reverseDiv
 {
-  /* width:10%;
-  height:10%;
-  margin-left: 50%
-  position: absolute;
-  top: 0%;
-  right: 0%; */
   padding: 0px 0px 0px 0px;
-
 }
 .reverseImg{
-  /* width: 100%;
-  height:100%;
-  margin-left: 850%;
-  margin-top: 200%;
-  z-index: 1;
-  position: relative;
-  object-fit: cover; */
   width: 100%;
   height: auto;
   padding: 0px 0px 0px 0px;
@@ -114,9 +91,6 @@ body{
 .divPlayersListBox{
   background:#f4f4f4;
   border-radius:5px;
-  /* width:99%;
-  height:35%;
-  margin:1% 0 1% 0; */
   border:1px solid;
   border-color:#f4f4f4;
   overflow-y:scroll;
@@ -172,11 +146,8 @@ body{
 }
 
 .divPlayerArea{
-  /* width:70%;
-  height:90%; */
   height: 100%;
   border-radius:6px;
-  /* float:right; */
   text-align:center;
   padding: 0 2% 0 2%;
 }
@@ -194,15 +165,14 @@ body{
   width: 100%;
   height:25%;
   margin-top: 2%;
-  text-align: center;
   border-radius:6px;
-  overflow-x: auto;
+  overflow-x: scroll;
   white-space: nowrap;
+  text-align: left;
 }
 .cardHeadings{
   font-size: 1.4em;
   height: 5%;
-  /* margin-top: 2%; */
   text-align: center;
 }
 .divPlayerCardArea{
@@ -213,13 +183,7 @@ body{
   border-radius:6px;
 }
 .playedCardImage{
-    width:auto;
     height: 65%;
-    margin: 2% 2% 2% 2%;
-    display:inline-block;
-    position:relative;
-    float: right;
-    float: top;
 }
 .playerCardImage{
     width:auto;
@@ -228,15 +192,17 @@ body{
     display:inline-block;
     position:relative;
 }
-.lastPlayed{
+.figureitem {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
     width:auto;
-    height: 20%;
     margin: 2% 2% 2% 2%;
-    display:inline-block;
-    position:relative;
-    font-size: 100%;
-    color:white;
-    float: right;
+    white-space: normal;
+}
+.figurecaption{
+  display: block;
+  color:white;
 }
 .buttonBar {
    margin-top: 1%;
@@ -247,7 +213,6 @@ body{
 }
 .btnCheckUno{
     background:#2ecc71;
-    /* padding: 1% 1% 1% 1%; */
     font-size: 1.2em;
     color:white;
     border-radius:6px;
@@ -303,6 +268,10 @@ body{
   .divWelcomePlayer
   {
     font-size: 12px;
+  }
+  .lastPlayed{
+    font-size: 12px;
+    right:-5%;
   }
 }
 
